# MantoFlota

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_usuarios.py
backend/app/: main.py  validators.py
backend/app/api/v1/: deps.py  deps_auth.py  router.py
backend/app/api/v1/routers/: auth.py  dashboard.py  export.py  mantenimientos.py  unidades.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  dashboard.py  mantenimiento.py  unidad.py  usuario.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  enums.py  mantenimiento.py  unidad.py  usuario.py
backend/app/schemas/: auth.py  dashboard.py  mantenimiento.py  unidad.py
backend/scripts/: ensure_db.py  seed_users.py
backend/tests/: conftest.py  test_api_read_by_id.py  test_cascade.py  test_config_extra.py  test_crud_direct.py  test_dashboard_inicio.py  test_export.py  test_health.py  test_main_lifespan.py  test_mantenimientos.py  test_permissions_consulta.py  test_routers_extra.py  test_schemas_auth.py  test_schemas_mantenimiento.py  test_security_tokens.py  test_session_get_db.py  test_unidades.py  test_validators.py  test_validators_all_branches.py  test_validators_extra.py
docs/: E3_ESTRUCTURA_PDF.md  ETAPA2.md  ETAPA3.md  MANUAL_TECNICO.md  MANUAL_USUARIO.md  mantoflota.pptx  mantoflota_presentacion.pptx
docs/evidencia/: README.md  RUN_BACKEND.txt  RUN_FRONTEND.txt  RUN_RESULTS.md
frontend/: eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.tsx
frontend/__tests__/: schemas.test.ts  site-header.test.tsx
(+19 files in other folders)
